PackageProperties - yes, now I'm happy